--- a/python-termcolor/PKGBUILD
+++ b/python-termcolor/PKGBUILD
@@ -2,17 +2,29 @@
 # Maintainer: Tim Hatch <tim@timhatch.com>
 
 pkgname=python-termcolor
-pkgver=1.1.0
-pkgrel=12
-pkgdesc="ANSII Color formatting for output in terminal"
+pkgver=2.0.1
+pkgrel=1
+pkgdesc="ANSI Color formatting for output in terminal"
 arch=('any')
-license=('GPL')
-url="https://pypi.python.org/pypi/termcolor"
+license=('MIT')
+url="https://github.com/termcolor/termcolor"
 depends=('python')
+makedepends=('python-build' 'python-installer' 'python-hatch-vcs')
+checkdepends=('python-pytest')
 source=(https://pypi.python.org/packages/source/t/termcolor/termcolor-$pkgver.tar.gz)
-sha256sums=('1d6d69ce66211143803fbc56652b41d73b4a400a2891d7bf7a1cdf4c02de613b')
+sha256sums=('6b2cf769e93364a2676e1de56a7c0cff2cf5bd07f37e9cc80b0dd6320ebfe388')
+
+build() {
+  cd termcolor-$pkgver
+  python -m build --no-isolation --wheel
+}
+
+check() {
+  cd termcolor-$pkgver
+  PYTHONPATH="$PWD/src" pytest
+}
 
 package() {
-  cd "$srcdir"/termcolor-$pkgver
-  python setup.py install --root="$pkgdir"
+  cd termcolor-$pkgver
+  python -m installer --destdir="$pkgdir" dist/*.whl
 }
