--- a/libjpeg-turbo/PKGBUILD
+++ b/libjpeg-turbo/PKGBUILD
@@ -3,10 +3,9 @@
 # Contributor: Allan McRae <allan@archlinux.org>
 # Contributor: Simone Sclavi 'Ito' <darkhado@gmail.com>
 
-_name=libjpeg-turbo
-pkgname=$_name
-pkgver=2.1.4
-pkgrel=2
+pkgname=libjpeg-turbo
+pkgver=2.1.5.1
+pkgrel=1
 pkgdesc="JPEG image codec with accelerated baseline compression and decompression"
 url="https://libjpeg-turbo.org/"
 arch=(x86_64)
@@ -15,30 +14,33 @@ depends=(glibc)
 makedepends=(cmake ninja nasm 'java-environment>11')
 optdepends=('java-runtime>11: for TurboJPEG Java wrapper')
 provides=(libjpeg libjpeg.so libturbojpeg.so)
-source=(https://sourceforge.net/projects/$_name/files/$pkgver/$_name-$pkgver.tar.gz{,.sig})
-sha512sums=('511f065767c022da06b6c36299686fa44f83441646f7e33b766c6cfab03f91b0e6bfa456962184071dadaed4057ba9a29cba685383f3eb86a4370a1a53731a70'
+source=(https://sourceforge.net/projects/$pkgname/files/$pkgver/$pkgname-$pkgver.tar.gz{,.sig})
+sha512sums=('86a7248d064043b26b09755633ef4872a2a6133c9e677a9fe4be6645b2e0fde102cf01e09119967b3b6b85f4cb93f3f7c49ec4973944d5eff99b5b90ce8b0be6'
             'SKIP')
-b2sums=('80ffd77d58a37eae0bdc1868d994f34ea52c13e2624c720b1d0b6ec4d6d14b16911163ccd4009c8d6eda214f31e1fff78bb7eb4739ae6589d0fd8c7008c0e972'
+b2sums=('9583a0a91e45347d651de6bf5192a23bfe4e64cef67cdbb18f5b578b424fc46fc114e5649e93a467906cf047948e43a11b6d17b48c47f879c51cff1a4ef356ff'
         'SKIP')
 validpgpkeys=('0338C8D8D9FDA62CF9C421BD7EC2DBB6F4DBF434') # The libjpeg-turbo Project (Signing key for official binaries) <information@libjpeg-turbo.org>
 
 build() {
-  cmake -S $_name-$pkgver -B build -G Ninja \
-        -DCMAKE_INSTALL_PREFIX=/usr \
-        -DCMAKE_INSTALL_LIBDIR=/usr/lib \
-        -DCMAKE_BUILD_TYPE=None \
-        -DENABLE_STATIC=OFF \
-        -DWITH_JAVA=ON \
-        -DWITH_JPEG8=ON \
-        -W no-dev \
-        -B build \
-        -S $_name-$pkgver
+  local cmake_options=(
+    -B build
+    -DCMAKE_INSTALL_PREFIX=/usr
+    -DCMAKE_INSTALL_LIBDIR=/usr/lib
+    -DCMAKE_BUILD_TYPE=None
+    -DENABLE_STATIC=OFF
+    -DWITH_JAVA=ON
+    -DWITH_JPEG8=ON
+    -G Ninja
+    -S $pkgname-$pkgver
+    -W no-dev
+  )
+
+  cmake "${cmake_options[@]}"
   cmake --build build -v
 }
 
 check() {
-  cd build
-  ctest --output-on-failure --stop-on-failure -j$(nproc)
+  ctest --test-dir build --output-on-failure --stop-on-failure -j$(nproc)
 }
 
 package() {
@@ -46,7 +48,7 @@ package() {
 
   # header required by some dependents
   # https://bugs.archlinux.org/task/24787
-  install -vDm 644 $_name-$pkgver/jpegint.h "$pkgdir/usr/include"
+  install -vDm 644 $pkgname-$pkgver/jpegint.h "$pkgdir/usr/include"
 
-  install -vDm 644 $_name-$pkgver/LICENSE.md -t "$pkgdir/usr/share/licenses/$pkgname"
+  install -vDm 644 $pkgname-$pkgver/LICENSE.md -t "$pkgdir/usr/share/licenses/$pkgname"
 }
