--- a/vala/PKGBUILD
+++ b/vala/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Timm Preetz <timm@preetz.us>
 
 pkgname=vala
-pkgver=0.56.4
+pkgver=0.56.7
 pkgrel=1
 pkgdesc='Compiler for the GObject type system'
 url='https://wiki.gnome.org/Projects/Vala'
@@ -31,15 +31,14 @@ checkdepends=(
   libx11
 )
 provides=(
-  libvala-${pkgver%.*}.so
-  libvaladoc-${pkgver%.*}.so
+  libvala{,doc}-${pkgver%.*}.so
   valadoc
 )
 conflicts=(valadoc)
 replaces=(valadoc)
-_commit=fbf513c52806e253b3dde68f477e1eca8ac38cd1  # tags/0.56.4^0
+_commit=0b562610d85a2a5d56d489757c2c499d3e652b8c  # tags/0.56.7^0
 source=("git+https://gitlab.gnome.org/GNOME/vala.git#commit=$_commit")
-sha256sums=('SKIP')
+b2sums=('SKIP')
 
 pkgver() {
   cd vala
